# espn_masterliste

./: .gitattributes  .gitignore  README.md  app.py  install.bat  launcher.py  main.py  pyproject.toml  run.bat  run_app.py
.github/workflows/: build-windows-exe.yml
core/: __init__.py  config.py  io.py  pdf.py  transform.py
membership/: __init__.py  compare.py  config.py  io.py  masterliste.py  pdf.py  transform.py
notebook/: test.ipynb
scripts/: build_windows.bat  build_windows.ps1
ui/: __init__.py  results.py  sidebar.py
