[project]
name = "espn-masterliste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "pandas>=1.4.0",
    "pdfplumber>=0.11.9",
    "streamlit>=1.55.0",
]

[dependency-groups]
build = ["pyinstaller>=6.14.0"]
